# medicare-chatbot

./: .gitignore  package-lock.json  pyproject.toml
Backend/: auth.py  constants.py  data_loader.py  main.py  router.py  schema.py
Backend/DataLoder/: hybrid_rag_retrieval.py  llm.py  sql_rag_retrival.py
Frontend/: next.config.js  package.json  tailwind.config.js
Frontend/src/app/: globals.css  layout.tsx  page.tsx
Frontend/src/components/: ChatInterface.tsx  LoginForm.tsx  Message.tsx  Sidebar.tsx
Frontend/src/context/: AuthContext.tsx
Frontend/src/lib/: api.ts
Frontend/src/types/: index.ts
