[project]
name = "medicare-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docling>=2.107.0",
    "dotenv>=0.9.9",
    "fastapi>=0.138.2",
    "fastembed>=0.8.0",
    "langchain>=1.3.11",
    "langchain-docling>=2.0.0",
    "langchain-qdrant>=1.1.0",
    "pydantic>=2.13.4",
    "python-jose>=3.5.0",
    "qdrant-client>=1.18.0",
    "sentence-transformers>=5.6.0",
    "unicorn>=2.1.4",
    "uvicorn>=0.49.0",
]
